--- a/src/docs/guides/general/architecture/rendering.zh-CN.mdx
+++ b/src/docs/guides/general/architecture/rendering.zh-CN.mdx
@@ -18,11 +18,13 @@ Univer 的渲染引擎参考了 KonvaJs / FabricJs 以及 BabylonJs，基于 Can
 
 ![rendererArchitecture](./rendering/renderer-architecture.png)
 
-## Engine
+## 渲染引擎
+
+### Engine
 
 管理 canvas 实例（例如修改 canvas 画布的宽高），提供 API 驱动 scene 进行逐帧绘制，封装事件机制提供给下层使用。
 
-## Scene
+### Scene
 
 Scene 是所有渲染对象存在的空间，它的面积可能超过当前 Viewport (Engine) 的大小。
 
@@ -66,7 +68,7 @@ scene.onPointerMoveObserver.add((moveEvt: IPointerEvent | IMouseEvent) => {
 });
 ```
 
-## Viewport
+### Viewport
 
 为了支持电子表格中冻结的场景，参考了 BabylonJs 的 Camera 概念，可以设置 Viewport 的位置和宽高来指定渲染 Scene 的哪个部分。
 
@@ -91,7 +93,7 @@ new ScrollBar(viewMain);
 
 Viewport 也会在渲染时会把自己所在的视口信息向需要渲染的 Object 传递，可以避免渲染视口之外的 Object。
 
-## Layer
+### Layer
 
 Layer 参考了 Konva 的设计，但开发者不需要手动创建 Layer，渲染引擎会通过 Scene 的方法自动创建 Layer。可以选择是否开启 Layer 层的缓存，在元素比较多的情况下会带来性能提升，但浏览器对 canvas 有总面积的限制，所以 Univer 需要用户指定打开哪些层的缓存。
 
@@ -123,7 +125,7 @@ class Scene {
 
 Object 会挂到 Layer 上，并且 Layer 会有一个离屏 canvas 作为缓存，当层非脏时，会直接复制缓存内容到画布上。
 
-## Object
+### Object
 
 所有需要绘制的对象都需要继承 `BaseObject`：
 
@@ -180,12 +182,71 @@ export class Rect<T extends IRectProps = IRectProps> extends Shape<T> {
 
 以电子表格为例。要绘制电子表格内容区域，需要考虑三个部分，背景色、文字、边框线，所以这里有 3 个 extension，他们接受 SpreadsheetSkeleton 作为输入，根据其提供的布局信息来按单元格进行绘制。
 
-Component 支持用 canvas 作为缓存，进行贴图缓存绘制。目前在滚动 sheet 的时候，渲染引擎只会绘制增量部分的视图，极大提升了性能。
+Component 支持滚动贴图，在滚动 sheet 的时候，渲染引擎只会绘制增量内容，极大提升了性能。
 
 ![rendererTextureCache](./rendering/renderer-texture-cache.png)
 
-## Render Unit
+## RenderUnit
 
-![render unit architecture](./rendering/render-unit.png)
+![RenderUnit Architecture](./rendering/render-unit-architecture.png)
 
-为了支持注销和创建不同的 unit，以及在未来支持多个 unit 同时渲染，Univer 提出了 `RenderUnit` 的概念，一个 unit 对应一个 `RenderUnit`。`RenderUnit` 内部会持有一个 `Injector`，用户注册的 render controller 会被 Univer 在这个 `Injector` 当中实例化。Render controller 负责一个 unit 对于某个功能的渲染逻辑，它需要继承 `IRenderController` 接口。
+为了支持在一个 Univer 内部渲染多个文档，我们在架构中引入了 `RenderUnit` 机制。
+
+每个 `RenderUnit` 负责绘制一个文档，并持有：
+
+- 一个 `Engine` 实例
+- 一个 `Scene` 实例
+- 一个 `UnitModel` 实例，可能是文档、电子表格或幻灯片等的文档模型
+- 一个 `Injector` 实例，用于实例化专门用于渲染和交互逻辑的 `IRenderModule`。这个注入器使得 `RenderUnit` 能够独立地完成渲染和交互逻辑，而不会相互干扰。
+
+### `IRenderModule`
+
+业务如果需要实现渲染相关的业务逻辑，则需要实现一个 `IRenderModule` 接口的类，并注册到 `IRenderManagerService`。例如：
+
+```ts
+export class UniverSheetsUIPlugin extends Plugin {
+    private _registerRenderBasics(): void {
+        ([
+            [SheetSkeletonManagerService],
+            [SheetRenderController],
+            [ISheetSelectionRenderService, { useClass: SheetSelectionRenderService }],
+        ] as Dependency[]).forEach((m) => {
+            this.disposeWithMe(this._renderManagerService.registerRenderModule(UniverInstanceType.UNIVER_SHEET, m));
+        });
+    }
+}
+```
+
+注册时，需要将 `IRenderModule` 与其对应的文档类型，即 `UniverInstanceType` 进行关联。`RenderUnit` 初始化时，会根据文档的 `UniverInstanceType` 从 `IRenderManagerService` 中获取对应的 `IRenderModule` 依赖并实例化他们。
+
+`IRenderModule` 的 constructor 的第一个参数是一个满足 `IRenderContext` 对象，它包含的属性包括：
+
+- `engine`：`Engine` 实例
+- `scene`：`Scene` 实例
+- `unit`：`UnitModel` 实例
+- `unitId`：`UnitModel` 的 id
+
+通过这些属性，`IRenderModule` 可以很方便地获取到渲染所需的各种资源，而无需（也不应当）注入 `IUniverInstanceService` 和 `IRenderManagerService` 等模块。
+
+除了 `IRenderContext`，`IRenderModule` 可以通过依赖注入获取其他 `IRenderModule`。同时由于 `RenderUnit` 中的 `Injector` 是全局 `Injector` 的子节点，因此 `IRenderModule` 中也可以注入全局模块，例如：
+
+```ts
+export class RefSelectionsRenderService extends BaseSelectionRenderService implements IRenderModule {
+    constructor(
+        private readonly _context: IRenderContext<Workbook>, // 渲染上下文
+        @Inject(Injector) injector: Injector, // RenderUnit 内部注入器
+        @Inject(ThemeService) themeService: ThemeService, // 全局依赖
+        @IShortcutService shortcutService: IShortcutService, // 全局依赖
+        @Inject(SheetSkeletonManagerService) sheetSkeletonManagerService: SheetSkeletonManagerService, // RenderUnit 内部依赖
+        @IRefSelectionsService private readonly _refSelectionsService: SheetsSelectionsService // 全局依赖
+    ) {
+      // ...
+    }
+}
+```
+
+某些情形下，你可能会需要从全局模块获取一个 `IRenderModule`，这种情形下你可以从 `IRenderManagerService` 获取 `RenderUnit` 并调用 `with` 方法，例如：
+
+```ts
+renderManagerService.getRenderById(unitId)?.with(DocSkeletonManagerService);
+```
