--- a/src/docs/guides/general/architecture/univer.en-US.mdx
+++ b/src/docs/guides/general/architecture/univer.en-US.mdx
@@ -1,6 +1,8 @@
 import { Callout } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
+{/* This is out of date with the Chinese version. It should be updated. */}
+
 # Univer Architecture
 
 <BadgeGroup values={[UniverTypes.GENERAL]} value={UniverTypes.GENERAL} />
