--- a/src/docs/guides/general/architecture/univer.en-US.mdx
+++ b/src/docs/guides/general/architecture/univer.en-US.mdx
@@ -7,88 +7,82 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 <BadgeGroup values={[UniverTypes.GENERAL]} value={UniverTypes.GENERAL} />
 
-This document describes the overall architecture of Univer.
+This document introduces the overall architecture of Univer. If you want to contribute code to Univer or write your own plugins, this document will help you.
 
-## Univer Code Organization
+## Building Blocks of Univer
+
+The basic elements of Univer's architecture are **modules** and **plugins**.
+
+## Plugins
 
 ![](./univer/architecture.png)
 
-### Plugins
-
-Univer's modules have been divided into various plugins based on comprehensive considerations of multiple factors. Multiple plugins combine to form a single Univer application.
+Univer's functionality is organized into plugins, with multiple plugins combining to form a single Univer application. For example, `@univerjs/ui` provides basic UI capabilities, `@univerjs/sheets` provides data capabilities for spreadsheets, and `@univerjs/sheets-ui` provides UI capabilities for spreadsheets.
 
 The plugin architecture offers the following advantages to Univer:
 
-1. Regardless of the environment in which it runs, Univer can satisfy different requirements by loading different plugins. This reduces redundant code and associated overhead (for example, in the Node.js environment, UI-related plugins can be avoided).
-2. You can choose to load only the necessary plugins, reducing the amount of unnecessary code.
-3. The plugin architecture makes it easier to modify and extend Univer, allowing you to develop your own plugins to meet your needs without changing Univer's codebase.
-4. Plugin architecture clarifies the responsibilities and dependencies of Univer's modules, making them easier to understand, modify, test, and maintain.
+1. **Composable**: You can choose which plugins to load based on your actual needs, customizing a Univer application that suits you.
+2. **Customizable**: You can develop your own plugins to meet specific requirements without changing Univer's core code.
+3. **Isomorphic**: Regardless of the environment in which Univer runs—browser, Electron, Node.js, web worker, test runner—you can adapt to different environments by loading different plugins. For example, in the Node.js environment, UI-related plugins can be avoided to prevent errors caused by accessing DOM-related APIs, reduce package size, and reduce memory usage.
+4. **Maintainable**: By distinguishing between plugins, the responsibilities and dependencies of Univer's modules are clearer, reducing coupling between features and making the code easier to understand, modify, test, and maintain.
 
-### Factors for Splitting Plugins
+### How to Divide Plugins?
 
-The division of plugins is quite flexible, and you can have your own criteria. However, the following are some of the considerations used by the Univer core team:
+Plugin division is quite flexible, and you can have your own set of methods. However, here are some methods used by the Univer core team:
 
-- Existence of modules that need to be loaded in certain environments but not in others; if such modules exist, they are suitable to be placed in a separate plugin. For example, since UI-related modules are not needed in Node.js, the UI-related parts of the basic sheet functions are split into `@univerjs/sheets-ui`.
-- Plugins can be divided based on different document types, such as `@univerjs/sheets` and `@univerjs/docs`.
-- Complex functions can be split into a separate plugin, such as `@univerjs/sheet-numfmt`, which is a separate plugin providing the ability to modify number formats.
-- General low-level capabilities can be split into a separate plugin, such as `@univerjs/design`, which provides design system-related capabilities, such as themes, colors, components, and more, or `@univerjs/rpc`, which provides RPC capabilities.
+- Whether there are modules that need to be loaded in environment A but not in environment B, if such modules exist, these modules are suitable for placement in a separate plugin. For example, UI-related parts of spreadsheets are split into `@univerjs/sheets-ui` because they do not need to be loaded in Node.js, while the core capabilities covering data and operations are placed in `@univerjs/sheets` because they need to be loaded in any environment. This classification method is very common in Univer source code.
+- Divide according to different document types, such as `@univerjs/sheets` and `@univerjs/docs` are divided according to document types.
+- Some complex functions can be divided into separate plugins, such as `@univerjs/sheet-find-replace`, which provides search and replace functionality.
+- Some common underlying capabilities can be divided into separate plugins, such as `@univerjs/design`, which provides design system-related capabilities such as themes, colors, and components, and `@univerjs/rpc`, which provides RPC capabilities.
 
-### Types of Plugins
+### Plugin Types
 
-Univer distinguishes between plugin types, allowing Univer to initialize the plugins at the most appropriate times, thereby optimizing memory usage for plugins.
+Univer distinguishes between different types of plugins, which currently include the following types, each corresponding to a document type:
 
-Currently, the following types are available:
+- `UniverInstanceType.UNIVER` Univer core plugins, which provide Univer's core capabilities and capabilities shared by other types of plugins.
+- `UniverInstanceType.UNIVER_DOC` Document type plugins
+- `UniverInstanceType.UNIVER_SHEET` Spreadsheet type plugins
+- `UniverInstanceType.UNIVER_SLIDE` Slide type plugins
 
-- `PluginType.Univer`: The core Univer plugins, which start loading and trigger the `onStarting` life cycle when a Univer instance is created.
-- `PluginType.Doc`: Document plugins for the `Doc` type.
-- `PluginType.Sheet`: Document plugins for the `Sheet` type.
-
-Except for `PluginType.Univer`, plugins of other types will only start loading and going through the life cycle when a corresponding type of file is created for the first time.
-
-<Callout type="info" emoji="ℹ️">
-  For information about life cycles, please refer to the "Plugin Life Cycle" section below.
+<Callout type="info" emoji="🚀">
+  By distinguishing between plugin types, we better control the lifecycle of plugins.
 </Callout>
 
-### Dependency Injection
+### Plugin Dependencies
 
-Plugins can be divided into multiple modules (divided in a manner similar to that in the "Hierarchical Structure" section below). These modules can be integrated with Univer's dependency injection system, allowing Univer to automatically parse the dependency relationships between these modules and instantiate them, significantly reducing the complexity of managing dependencies in a complex system. Currently, all official Univer plugins have integrated the dependency injection system.
+Plugins may have dependencies on each other. When writing plugins, you can declare dependencies between plugins using the `DependentOn` decorator. When constructing plugins, Univer automatically registers and constructs dependencies if it finds that the required plugins have not been registered.
 
-The dependency injection tool used by Univer is [redi](https://redi.wendell.fun), which is built into `@univerjs/core`. You can refer to redi's documentation to understand the basic concepts of dependency injection and how to use it.
+For example, if the `@univerjs/sheets-ui` plugin depends on the `@univerjs/sheets` plugin, you can write it like this:
 
-### Public and Private Modules of a Plugin
+```ts
+@DependentOn(UniverSheetsPlugin, UniverUIPlugin)
+export class UniverSheetsUIPlugin extends Plugin {
+}
+```
 
-To expose interfaces to other plugins, a plugin can export the dependency injection identifiers for these modules in the module's export file (usually index.ts). If a module's identifier is exported, other plugins can inject these module identifiers, creating a dependency relationship with these modules, which become public modules of the first plugin. Private modules are the opposite. If you are familiar with Angular, you will notice that this concept is very similar to NgModule, but instead of using the exports field to declare a module's public modules, we use es module's export to expose the module and consider it a public module.
+### Plugin Lifecycle
 
-### Plugin Life Cycle
+Plugins have a lifecycle, and by using the lifecycle, developers can better predict the behavior of plugins, thereby avoiding timing-related logic errors.
 
-Univer plugins have a life cycle to make plugin behavior more predictable and avoid timing-related logic errors.
+There are several stages in the lifecycle of a Univer plugin:
 
-Plugins have the following four life cycles:
+- `Starting` The first lifecycle of the plugin mounted on the Univer instance, in which the plugin should add its own module to the dependency injection system.
+- `Ready` The first business instance of Univer has been created, and the plugin can do most of the initialization work in this lifecycle.
+- `Rendered` The first rendering has been completed, and the plugin can perform the necessary rendering and DOM initialization work in this lifecycle.
+- `Steady` Triggered after a period of time in `Rendered`, the plugin can perform non-first-screen work in this lifecycle to improve loading performance.
 
-- `Starting`: The first life cycle of the plugin being mounted to the Univer instance, when the Univer business instance has not yet been created. During this life cycle, the plugin should add its modules to the dependency injection system. It is not recommended to initialize internal modules outside of this life cycle.
-- `Ready`: The first business instance of Univer has been created, and the plugin can perform most of the initialization work in this life cycle.
-- `Rendered`: The first rendering has been completed, and the plugin can perform DOM-dependent initialization work in this life cycle.
-- `Steady`: Triggered after a period of time following `Rendered`, the plugin can perform non-first screen necessary work in this life cycle to improve loading performance.
-
-Correspondingly, the Plugin type has four life cycle hooks, and plugins can override these methods to execute corresponding logic in each declared life cycle.
+Accordingly, there are four lifecycle hooks on the `Plugin` type, and each plugin can execute corresponding logic in each lifecycle by overriding these methods.
 
 ```typescript
 export abstract class Plugin {
-  onStarting(_injector: Injector): void {}
+  onStarting(): void {}
   onReady(): void {}
   onRendered(): void {}
   onSteady(): void {}
 }
 ```
 
-Besides these four life cycle hooks, internal modules of the plugin can use the `OnLifecycle` decorator to declare that they need to be initialized at a specific life cycle stage, such as
-
-```typescript
-@OnLifecycle(LifecycleStages.Rendered, IMEInputController)
-export class IMEInputController extends Disposable {}
-```
-
-Additionally, life cycle events can also be monitored by injecting `LifecycleService`.
+Other than using lifecycle hooks, you can also use decorators to listen to lifecycle events.
 
 ```typescript
 export class YourService {
@@ -102,50 +96,102 @@ export class YourService {
 }
 ```
 
-### Hierarchical Structure
+Different types of plugins will start their lifecycle at different times. `UniverInstanceType.UNIVER` plugins will be built immediately upon registration and enter the `Starting` lifecycle, while other types of plugins will be built and go through the lifecycle when the corresponding type of file is created for the first time, allowing Univer to initialize plugins at the most appropriate time to improve loading performance.
+
+## Modules
+
+Inside a plugin, modules are further divided into UI components, controllers, services, models, etc. Each module has its own responsibilities, but they all share one thing in common: they are only responsible for a specific domain.
+
+### Dependency Injection
+
+Modules can be added to Univer's dependency injection system to build dependencies. Univer can automatically resolve the dependencies between these modules and instantiate them, greatly reducing the complexity of managing dependencies in a complex system. It is recommended that plugins add their modules to the dependency injection system in the `onStarting` lifecycle.
+
+<Callout type="info" emoji="ℹ️">
+  We use the dependency injection tool [redi](https://redi.wendell.fun/en-US) in Univer, you can refer to the redi documentation to understand the basic concepts of dependency injection and how to use it. 
+</Callout>
+
+### Public and Private Modules
+
+If a plugin wants to expose some APIs to other plugins, the plugin can export the dependency injection identifiers of the corresponding modules in its export file (index.ts), and these modules become public modules. Other plugins can import these identifiers to establish dependencies on these modules. Conversely, if a module is not exported, it is a private module.
+
+By dividing modules into public and private, plugins can better control the visibility of modules, thereby avoiding the abuse of their own capabilities by other plugins.
+
+### Overriding Modules Inside Plugins
+
+Some plugins support overriding modules inside the plugin. These plugins have a `override` field in their configuration object, which can be used to override modules inside the plugin, and `null` can be passed to prevent Univer from loading this module. In the [hierarchical dependency injection system](https://redi.wendell.fun/docs/hierarchy), by overriding the module to `null`, the dependency injection system of Univer can use the implementation of the parent injector.
+
+### Translate the following section from Chinese to English
+
+### Divide Modules by Layers on the Architecture
 
 ![image](./univer/layers.png)
 
-Modules within the plugin should belong to one of the following levels:
+A module should belong to one of the following layers:
 
-- View: Handles rendering and interaction, including Canvas rendering and React components.
-- Controller: Encapsulates business logic (especially feature logic), dispatches commands, etc.
-- Command: Executes logic through the command pattern, modifying the state or data of the layers below Service / Model.
-- Service: Encapsulates features for use by higher-level modules, stores application internal state, and manipulates lower-level data, etc.
-- Model: Stores business data.
+- View: handles rendering and interaction, including Canvas rendering and React components
+- Controllers: encapsulate business logic (especially functional logic), dispatch commands, etc.
+- Command: executes logic through the command pattern, modifying the state or data of the lower layers such as Service / Model
+- Service: encapsulates functionality according to concerns for upper-level modules to use, stores application internal state, operates on underlying data, etc.
+- Model: stores data
 
-There should be a single direction dependency between levels, and only certain Controllers, acting as the view-model in MVVM, may hold references to UI layer objects. Other levels should not reference the code of higher-level modules.
-
-By using module layering and restricting single direction dependency, along with clear module division, Univer can maximize code reuse in different hosts.
+In the hierarchy, the layers should maintain a one-way dependency relationship, except for some Controllers that may hold references to UI layer objects as view-models in MVVM, other layers are prohibited from referencing code from upper-level modules.
 
 <Callout type="info" emoji="ℹ️">
-  When using Univer CLI to initialize the plugin, it will help you with directory structure.
+  If you use Univer CLI to initialize plugins, Univer CLI will help you divide directories.
 </Callout>
+
+### Divide Modules by Separation of Concerns
+
+There is a layer named service in the layered architecture of Univer, and the modules in this layer are called services. Their responsibility is to encapsulate some common functions. Univer encourages the use of the principle of [separation of concerns](https://en.wikipedia.org/wiki/Separation_of_concerns) to encapsulate functions into different services, making services more focused on a specific domain, and easier to understand, modify, test, and maintain. For example, `@univerjs/sheets-ui` has the `IShortcutService` for managing shortcuts, the `IMenuService` for managing menus, and so on.
+
+The benefits of using the separation of concerns principle to divide modules are:
+
+- Reducing the complexity of modules and the coupling between modules.
+- Improving the understandability, maintainability, and testability of modules.
+- Making modules easier to test.
+
+### Divide Modules by Abstract Dependency Principle
+
+When encapsulating services, the abstract dependency principle can be used to abstract the dependencies of services into interfaces.
+
+The abstract dependency principle is mainly used to deal with the differences between different runtime environments. For example, for the clipboard service, you can directly use the `navigator.clipboard` API in the browser environment, while in the mobile environment, you can access the system clipboard through the JSBridge method. To solve this problem, the dependency of the clipboard service can be abstracted into the `IClipboardService` interface, then implemented as `BrowserClipboardService` in the browser environment, and implemented as `MobileBridgeClipboardService` in the mobile environment. Both implement `IClipboardService`, shielding the differences in the underlying clipboard implementation from the upper-level copy-paste features.
+
+### Initialize Modules at the Right Time
+
+Modules registered in the dependency injector will be initialized when they are first referenced, so you need to manually activate modules that will not be referenced by other modules. The way to do this is to get a module from the dependency injector in the plugin's lifecycle hook, which will trigger the initialization of the module.
+
+```ts
+class MyPlugin extends Plugin {
+  onReady(): void {
+    this._injector.get(MyService);
+  }
+}
+```
 
 ## Command System
 
-In Univer, changes to the application state and data must be made through the command system. The command system itself is an abstraction of the application logic, decoupling the execution process of the logic and its parameters.
+In Univer, changes to application state and data need to be executed through the command system. The command system itself is an abstraction and logging of application logic.
 
-`@univerjs/core` provides a command service, and plugins can encapsulate business logic in commands and use the dependency injection system to obtain other modules and execute business logic.
+`@univerjs/core` provides a command service, and plugins can encapsulate business logic in commands. During the execution of a command, other modules can be obtained through the dependency injection system to implement business logic.
 
-Plugins can register commands using the `ICommandService` provided `registerCommand` interface and execute them using the `executeCommand` interface:
+Plugins can register commands through the `registerCommand` interface provided by `ICommandService` and execute commands through the `executeCommand` method.
 
-`Command` has three types:
+There are three types of commands in Univer:
 
-- `COMMAND`: Responsible for creating, arranging, and executing `MUTATION` or `OPERATION` based on specific business logic. For example, a **delete row COMMAND** will generate a **delete row MUTATION** and an undo **insert row MUTATION**, as well as a **set cell content MUTATION**.
-  - `COMMAND` is the main carrier of business logic. If a _user operation behavior_ requires triggering different _low-level behaviors_ based on the application state, such as triggering _bold text_ modification based on the current selection range, the corresponding judgment should be completed by `COMMAND`.
-  - `COMMAND` can dispatch other `COMMAND`s, `OPERATION`s, and `MUTATION`s.
-  - `COMMAND` allows asynchronous execution.
-- `MUTATION`: Refers to changes to the stored data, such as inserting rows and columns, modifying cell content, and modifying the filter range, etc. If you want to add collaborative editing capabilities to Univer, it is the smallest unit of conflict resolution.
-  - `MUTATION` cannot dispatch any other commands.
-  - `MUTATION` must be executed synchronously.
-- `OPERATION`: Refers to changes to non-persistent data (or application state), and does not involve conflict resolution, such as modifying scrolling position, modifying sidebar status, etc.
-  - `OPERATION` cannot dispatch any other commands.
-  - `OPERATION` must be executed synchronously.
+- `COMMAND`: Responsible for creating, orchestrating, and executing `MUTATION` or `OPERATION` according to specific business logic. For example, a **delete row `COMMAND`** will generate a **delete row `MUTATION`**, an **insert row `MUTATION`** for undo, and a **set cell content `MUTATION`**.
+  - `COMMAND` is the main carrier of business logic. If different underlying behaviors need to be triggered according to the application state for a _user operation behavior_—for example, when a _user clicks the bold text button_ and needs to determine the _effective range of the bold operation_ according to the current selection range—such judgment should be completed by `COMMAND`.
+  - Can dispatch other `COMMAND` `OPERATION` `MUTATION`
+  - Allows asynchronous execution
+- `MUTATION` is the change made to the data saved to snapshot, such as inserting rows and columns, modifying cell content, modifying filter ranges, etc. If you want to add collaborative editing capabilities to Univer, it is the smallest unit of conflict resolution.
+  - No further dispatch of any commands
+  - **Must be executed synchronously**
+- `OPERATION` is the change made to data that is not saved to snapshot, without conflict resolution, such as modifying scroll position, modifying sidebar state, etc.
+  - No further dispatch of any commands
+  - **Must be executed synchronously**
 
-### Event Listening
+### Listen to Commands
 
-`ICommandService` provides an event listening interface, allowing plugins to listen for which commands have been executed and what their parameters are. In fact, an event is dispatched after the command execution:
+`ICommandService` provides an event listening interface, and plugins can listen to which commands have been executed and what parameters have been executed. In fact, an object like this will be dispatched after the command is executed:
 
 ```typescript
 /**
@@ -163,29 +209,19 @@ export interface ICommandInfo<T extends object = object> {
 }
 ```
 
-By listening to command execution, Univer's capabilities can be expanded in a non-invasive way, such as:
+By listening to the execution of events, you can extend the capabilities of Univer in a non-intrusive way, such as:
 
-- **Collaborative editing**: A collaborative editing plugin can listen for all `MUTATION` type commands and use a collaborative editing algorithm to send `MUTATION` to other collaborative ends, and re-execute these `MUTATION` through `ICommandService`.
-- **Collaborative cursor**: Monitor the selection change `OPERATION` and send it to other ends, and the other ends can draw the collaborative cursor by parsing the parameters.
-- **Live Share**: Monitor scrolling and zooming `OPERATION` and send it to the audience end, allowing the audience to synchronize the presenter's browsing position.
+- **Collaborative Editing**: A collaborative editing plugin can listen to all `MUTATION` type commands and send the `MUTATION` to other collaborative clients through a collaborative editing algorithm, then re-execute these `MUTATION` through `ICommandService`.
+- **Collaborative Cursor**: Listen to selection changes `OPERATION` and send them to other clients, which can draw collaborative cursors by parsing parameters.
+- **Live Share**: Listen to scroll and zoom `OPERATION` and send them to the audience, allowing the audience to synchronize the presenter's browsing position.
 - Operation recording
 
-And more.
+and things like that.
 
-## Service-Oriented Architecture
+## Further Reading
 
-### Separation of Concerns
+You can read the following sections to learn about the architecture design of Univer subsystems:
 
-In the "Module Layering" section, we mentioned that there is a layer called "service" in the Univer module hierarchy. This layer of modules is called services, and their responsibility is to encapsulate some common functions. Univer encourages, in its architecture, the [separation of concerns](https://en.wikipedia.org/wiki/Separation_of_concerns) principle, which is to encapsulate functionality into different services. This way, the services can focus more on a specific function, making them easier to understand, modify, test, and maintain.
-
-### Abstracting Dependencies
-
-When encapsulating services, it is recommended to use the principle of abstracting dependencies, abstracting the service's dependency on other services into an interface. This makes the service more testable and maintainable.
-
-## Learn More
-
-The above introduces the overall architecture of Univer. To learn about the architectural design of Univer's subsystems, you can read the following chapters:
-
-- [Formula System](/guides/sheet/architecture/formula)
-- [Rendering System](/guides/sheet/architecture/rendering)
+- [Formula](/guides/sheet/architecture/formula)
+- [Rendering](/guides/sheet/architecture/rendering)
 - [Web Worker](/guides/sheet/architecture/web-worker)
