docs: update features in introduction

--- a/src/docs/guides/general/introduction.en-US.mdx
+++ b/src/docs/guides/general/introduction.en-US.mdx
@@ -66,7 +66,7 @@ export const features = [{
 
 - Create, delete and re-order worksheets
 - Cell styles: bold, italic, underline, strike-through, font family, font size, text color, background color, border style, text alignment, text rotation
-- Merged cells: merge and unmerge cells, merge cells in different directions
+- Merged cells: merge and un-merge cells, merge cells in different directions
 - Row column operations: insert, delete, and move rows/columns, modify row height and column width
 - Copy & paste: paste values only, paste format only, paste formula only, paste column width only, paste border style only
 - Clear content: content only, style only, all
@@ -76,13 +76,13 @@ export const features = [{
 - Format painter
 - Cell comments
 - Insert floating images
-- Insert charts
 
 #### Viewing
 
 - Freeze column and/or rows
 - Summary bar
   - Sum, Max, Min, Average, Count
+- Crosshair Highlight
 
 #### Data and Calculation
 
@@ -91,6 +91,7 @@ export const features = [{
   - Formula highlighting
   - Built-in formulas
   - Formula calculation using Web Workers (optional)
+- Pivot Table
 - Number format: general, accounting, currency, date, thousands separator
 - Data validation
 - Conditional formatting
@@ -117,6 +118,7 @@ export const features = [{
 - Comments
 - Insert floating images
 - Collaborative editing
+- Tables
 
 #### Typesetting
 
