--- a/src/docs/guides/general/introduction.zh-CN.mdx
+++ b/src/docs/guides/general/introduction.zh-CN.mdx
@@ -76,13 +76,13 @@ export const features = [{
 - 格式刷
 - 评论
 - 插入浮动图片
-- 插入图表
 
 #### 浏览
 
 - 冻结行列
 - 统计栏
   - 求和、最大值、最小值、平均值、计数
+- 十字高亮 
 
 #### 数据与计算
 
@@ -91,6 +91,7 @@ export const features = [{
   - 公式高亮
   - 内置多种公式
   - 基于 Web Worker 的公式计算（可选）
+- 数据透视表
 - 数字格式
   - 常规、会计、货币、日期、千分位符
 - 数据验证
@@ -118,6 +119,8 @@ export const features = [{
 - 评论
 - 插入浮动图片
 - 协同编辑
+- 表格
+
 
 #### 排版
 
