--- a/src/docs/guides/sheet/features/pivot-table.en-US.mdx
+++ b/src/docs/guides/sheet/features/pivot-table.en-US.mdx
@@ -2,18 +2,18 @@ import { Callout, Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 import Sandbox from '@/components/Sandbox'
 
-import entryFile from './hyperlink/demo-1/index.txt'
+import entryFile from './pivot-table/demo.txt'
 
 # Pivot Table
 
 <BadgeGroup values={[UniverTypes.SHEET]} value={UniverTypes.SHEET} />
 
-{/* <Sandbox entryFile={entryFile} /> */}
+<Sandbox entryFile={entryFile}  />
 
 Pivot table is a powerful data analysis tool that can quickly summarize, organize and analyze large amounts of data, thereby helping users discover patterns and trends in the data.
 
-- `@univerjs-pro/pivot-engine` provides the most basic data calculation capabilities for pivot tables. The plugin does not rely on any third-party plug-ins for its work.
-- `@univerjs-pro/sheets-pivot` assembles pivot-engine into universal sheet plugin to support table rendering, collaboration, formulas and other capabilities
+- `@univerjs-pro/engine-pivot` provides the most basic data calculation capabilities for pivot tables. The plugin does not rely on any third-party plug-ins for its work.
+- `@univerjs-pro/sheets-pivot` assembles engine-pivot into universal sheet plugin to support table rendering, collaboration, formulas and other capabilities
 - `@univerjs-pro/sheets-pivot-ui` provides a basic drag-and-drop interface & filtering and other dialogs required for interaction
 
 ## Feature ability
@@ -45,12 +45,12 @@ Since PivotTable is a very complex and large-scale function, we currently provid
 <Tabs items={['pnpm', 'npm']}>
   <Tabs.Tab label="pnpm">
     ```shell
-    pnpm add @univerjs-pro/pivot-engine @univerjs/sheets-pivot @univerjs/sheets-pivot-ui
+    pnpm add @univerjs-pro/engine-pivot @univerjs/sheets-pivot @univerjs/sheets-pivot-ui
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
     ```shell
-    npm install @univerjs-pro/pivot-engine @univerjs/sheets-pivot @univerjs/sheets-pivot-ui
+    npm install @univerjs-pro/engine-pivot @univerjs/sheets-pivot @univerjs/sheets-pivot-ui
     ```
   </Tabs.Tab>
 </Tabs>
