docs: update crosshair docs

--- a/src/docs/guides/general/concepts.zh-CN.mdx
+++ b/src/docs/guides/general/concepts.zh-CN.mdx
@@ -3,7 +3,7 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 # 基本概念
 
-<BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC, UniverTypes.SLIDE]} value={UniverTypes.SHEET} />
+<BadgeGroup values={[UniverTypes.GENERAL]} value={UniverTypes.GENERAL} />
 
 在进一步深入了解 Univer 之前，请阅读本篇文档以了解 Univer 的基本概念，将有助于你更顺利地使用 Univer。
 
