--- a/src/docs/guides/general/concepts.en-US.mdx
+++ b/src/docs/guides/general/concepts.en-US.mdx
@@ -3,7 +3,7 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 # Basic Concepts
 
-<BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC, UniverTypes.SLIDE]} value={UniverTypes.SHEET} />
+<BadgeGroup values={[UniverTypes.GENERAL]} value={UniverTypes.GENERAL} />
 
 Before diving deeper into Univer, please read this document to understand the basic concepts of Univer, which will help you use Univer more smoothly.
 
