--- a/src/docs/guides/sheet/features/crosshair.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/crosshair.zh-CN.mdx
@@ -1,9 +1,14 @@
 import { Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
+import Sandbox from '@/components/Sandbox'
+
+import entryFile from './crosshair/demo-1/index.txt'
 
 # 十字高亮
 
 <BadgeGroup values={[UniverTypes.SHEET]} value={UniverTypes.SHEET} />
+
+<Sandbox entryFile={entryFile} />
 
 十字高亮将用户选中的单元格所在行列突出显示，以便用户更容易地识别当前选中的单元格。
 
