--- a/src/docs/guides/sheet/features/collaboration.en-US.mdx
+++ b/src/docs/guides/sheet/features/collaboration.en-US.mdx
@@ -59,7 +59,7 @@ const univer = new Univer({
 ```typescript
 // By setting the override option to [[IAuthzIoService, null]], you can instruct Univer not to register the built-in IAuthzIoService.
 // By setting the override option to [[IUndoRedoService, null]], you can instruct Univer not to register the built-in IUndoRedoService.
-// This way, Univer will use the service provided by UniverCollaborationPlugin as the implementation of the authorization/undo-redo service.
+// This way, Univer will use the services provided by the UniverCollaborationPlugin as the implementation for the authorization and undo-redo features.
 const univer = new Univer({
   override: [
     [IAuthzIoService, null]
