--- a/src/docs/blog/post/anatomy.zh-CN.mdx
+++ b/src/docs/blog/post/anatomy.zh-CN.mdx
@@ -1,5 +1,5 @@
 ---
-title: 如何编写符合架构的插件
+title: 解剖筛选：如何编写 Univer 插件
 desc: 这篇文章以 Univer 团队开发的筛选插件为例，介绍如何编写符合 Univer 架构的插件，涉及插件系统、依赖注入、资源加载、命令模式、Render Unit 等等主题，适合想要开发 Univer 插件的开发者阅读。
 tags:
   - Plugin
@@ -12,6 +12,8 @@ date: 2024-08-17
 ---
 
 import { Callout } from 'nextra/components'
+
+# 解剖筛选：如何编写 Univer 插件
 
 Univer 提供了 Facade API，使得开发者们可以简单地调用 API 来实现一些自定义功能。但是，如果想要深度定制或者是开发一个全新的功能，那么就需要了解 Univer 的架构，并学习如何编写符合架构的插件。
 
@@ -46,7 +48,6 @@ sheets-filter-ui
 
 ```plaintext
 .
-├── README.md
 ├── package.json
 ├── src
 │   ├── __testing__ // 用于测试的辅助文件，不包含用例
@@ -81,13 +82,9 @@ sheets-filter-ui
 │   ├── views // UI 组件
 │   │   ├── components // React 绘制的部分
 │   │   └── widgets // Canvas 绘制的部分
-│   ├── vite-env.d.ts
 │   └── worker
 │       ├── generate-filter-values.service.ts
 │       └── plugin.ts
-├── tsconfig.json
-├── tsconfig.node.json
-└── vite.config.ts
 ```
 
 插件内部按照层次结构来划分代码。
