--- a/src/docs/guides/sheet/features/data-validation.en-US.mdx
+++ b/src/docs/guides/sheet/features/data-validation.en-US.mdx
@@ -55,59 +55,151 @@ univer.registerPlugin(UniverDataValidationPlugin);
 univer.registerPlugin(UniverSheetsDataValidationPlugin);
 ```
 
-## API
+## Using Facade API
 
-Full API please refer to [@univerjs/sheets-data-validation](/typedoc/@univerjs/sheets-data-validation/README)
-
-### Using command
-
-Make example for add data validation
-
+### Add a data validation rule
 ```typescript
-// Commands and Interface of Command params for sheet-data-validation
-import type {
-  IAddSheetDataValidationCommandParams,
-  IRemoveSheetDataValidationCommandParams,
-  IUpdateSheetDataValidationOptionsCommandParams,
-  IUpdateSheetDataValidationRangeCommandParams,
-  IUpdateSheetDataValidationSettingCommandParams,
-} from '@univerjs/sheets-data-validation';
-import {
-  AddSheetDataValidationCommand,
-  DATA_VALIDATION_PLUGIN_NAME,
-  RemoveSheetDataValidationCommand,
-  UniverSheetsDataValidationPlugin,
-  UpdateSheetDataValidationOptionsCommand,
-  UpdateSheetDataValidationRangeCommand,
-  UpdateSheetDataValidationSettingCommand,
-} from '@univerjs/sheets-data-validation';
+import { FUniver } from '@univerjs/facade';
 
-// eg. Add data validation from command
-const commandService = univer.__getInjector().get(ICommandService);
+const univerAPI = FUniver.newAPI(univer);
 
-commandService.executeCommand(AddSheetDataValidationCommand.id, {
-  unitId: 'unitId',
-  subUnitId: 'subUnitId',
-  rule: {
-    uid: 'xxx-2',
-    type: DataValidationType.CHECKBOX,
-    ranges: [{
-      startRow: 6,
-      endRow: 10,
-      startColumn: 0,
-      endColumn: 5,
-    }],
-  },
-} as IAddSheetDataValidationCommandParams);
+// get range
+const workbook = univerAPI.getActiveWorkbook();
+const worksheet = workbook.getActiveSheet();
+const A1 = worksheet.getRange(0, 0, 1, 1);
+
+// build data validation
+const dataValidationBuilder = FUniver.newDataValidation();
+const dataValidation = dataValidationBuilder.requireCheckbox().build();
+
+// set data validation
+A1.setDataValidation(dataValidation);
 ```
 
-### Using internal service
-
+### clear data validations of range
 ```typescript
-// internal service
-import { SheetsDataValidationValidatorService } from '@univerjs/sheets-data-validation';
+import { FUniver } from '@univerjs/facade';
 
-// Using internal service Such as validator
-const sheetsDataValidationValidatorService = univer.__getInjector().get(SheetsDataValidationValidatorService);
-sheetsDataValidationValidatorService.validatorWorksheet('unitId', 'sheetId')
+const univerAPI = FUniver.newAPI(univer);
+
+// get range
+const workbook = univerAPI.getActiveWorkbook();
+const worksheet = workbook.getActiveSheet();
+const A1_J10 = worksheet.getRange(0, 0, 10, 10);
+
+// clear data validation of range
+A1_J10.setDataValidation(null);
+```
+
+### get data validations of Range/Worksheet 
+```typescript
+import { FUniver } from '@univerjs/facade';
+
+const univerAPI = FUniver.newAPI(univer);
+
+// get range
+const workbook = univerAPI.getActiveWorkbook();
+const worksheet = workbook.getActiveSheet();
+const A1_J10 = worksheet.getRange(0, 0, 10, 10);
+
+// get data validation of range
+const dataValidation = A1_J10.getDataValidation();
+const dataValidations = A1_J10.getDataValidations();
+
+// get data validation of worksheet
+const dataValidationsOfSheet = worksheet.getDataValidations();
+```
+
+### Update/Delete data validation
+```typescript
+import { DataValidationErrorStyle, DataValidationOperator, DataValidationType } from '@univerjs/core';
+import { FUniver } from '@univerjs/facade';
+
+const univerAPI = FUniver.newAPI(univer);
+
+// get range
+const workbook = univerAPI.getActiveWorkbook();
+const worksheet = workbook.getActiveSheet();
+const A1_J10 = worksheet.getRange(0, 0, 10, 10);
+
+// get data validation
+const dataValidation = A1_J10.getDataValidation();
+
+// update data validation range
+dataValidation.setRanges([{
+    startRow: 0,
+    startColumn: 0,
+    endColumn: 20,
+    endRow: 20,
+}]);
+
+// update data validation criteria
+dataValidation.setCriteria(DataValidationType.WHOLE, [DataValidationOperator.BETWEEN, '1', '100']);
+
+// update data validation options
+dataValidation.setOptions({
+    errorStyle: DataValidationErrorStyle.STOP,
+});
+
+// delete data validation
+dataValidation.delete();
+```
+
+### get validator status
+```typescript
+import { FUniver } from '@univerjs/facade';
+
+const univerAPI = FUniver.newAPI(univer);
+
+// get range
+const workbook = univerAPI.getActiveWorkbook();
+const worksheet = workbook.getActiveSheet();
+const A1_J10 = worksheet.getRange(0, 0, 10, 10);
+
+A1_J10.getValidatorStatus().then((status) => {
+    console.log('===status', status);
+});
+
+worksheet.getValidatorStatus().then((statusOfSheet) => {
+    console.log('===statusOfSheet', statusOfSheet);
+});
+
+workbook?.getValidatorStatus().then((statusOfWorkbook) => {
+    console.log('===statusOfWorkbook', statusOfWorkbook);
+});
+```
+
+### event
+```typescript
+import { FUniver } from '@univerjs/facade';
+const univerAPI = FUniver.newAPI(univer);
+
+// don't forget to dispose the listener
+const dispose = univerAPI.getSheetHooks().onBeforeAddDataValidation((event) => {
+    console.log('===onBeforeAddDataValidation', event);
+});
+
+univerAPI.getSheetHooks().onBeforeDeleteAllDataValidation((event) => {
+    console.log('===onBeforeDeleteAllDataValidation', event);
+});
+
+univerAPI.getSheetHooks().onBeforeUpdateDataValidationCriteria((event) => {
+    console.log('===onBeforeUpdateDataValidationCriteria', event);
+});
+
+univerAPI.getSheetHooks().onBeforeUpdateDataValidationRange((event) => {
+    console.log('===onBeforeUpdateDataValidationRange', event);
+});
+
+univerAPI.getSheetHooks().onBeforeUpdateDataValidationOptions((event) => {
+    console.log('===onBeforeUpdateDataValidationOptions', event);
+});
+
+univerAPI.getSheetHooks().onDataValidationChange((event) => {
+    console.log('===onDataValidationChange', event);
+});
+
+univerAPI.getSheetHooks().onDataValidationStatusChange((event) => {
+    console.log('===onDataValidationStatusChange', event);
+});
 ```
