feat: install script change to get.univer.ai

--- a/src/docs/guides/general/server/docker.en-US.mdx
+++ b/src/docs/guides/general/server/docker.en-US.mdx
@@ -26,7 +26,7 @@ Our architecture is built on PostgreSQL and RabbitMQ.
 Compatible with Linux, Mac, and Windows/WSL environments.
 
 ```
-bash -c "$(curl -fsSL https://raw.githubusercontent.com/dream-num/helm-charts/main/install.sh)"
+bash -c "$(curl -fsSL https://get.univer.ai)"
 ```
 
 <Callout emoji="⚠️">
@@ -54,7 +54,7 @@ Default ports for Univer services are listed below:
 | service Name | Port Number |  	Function |
 | --- | --- | --- |
 | universer | 8000 | Serves API over HTTP |
-| univer-minio | 9000 | Acts as the S3 storage server |
+| univer-minio | 19000 | Acts as the S3 storage server |
 | univer-client | 3010 | Provides the frontend interface |
 
 ## Offline Deployment
