--- a/src/docs/guides/general/server/docker.zh-CN.mdx
+++ b/src/docs/guides/general/server/docker.zh-CN.mdx
@@ -26,7 +26,7 @@ PostgreSQL + RabbitMQ
 系统环境：Linux、Mac、Windows/WSL
 
 ```
-bash -c "$(curl -fsSL https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/install.sh)"
+bash -c "$(curl -fsSL https://get.univer.ai)"
 ```
 
 <Callout emoji="⚠️">
@@ -52,7 +52,7 @@ Univer 服务默认端口如下：
 | service | port | description |
 | --- | --- | --- |
 | universer | 8000 | api http server |
-| univer-minio | 9000 | s3 server |
+| univer-minio | 19000 | s3 server |
 | univer-client | 3010 | frontend |
 
 ## 离线部署
