--- a/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
@@ -46,7 +46,7 @@ Of course, you may want more than just the basics. If you're looking to add feat
   ### Install and Run the Server
 
   ```shell
-  bash -c "$(curl -fsSL https://release-univer.oss-cn-shenzhen.aliyuncs.com/release-demo/install.sh)"
+  bash -c "$(curl -fsSL https://get.univer.ai)"
   ```
 
   <Callout emoji="⚠️">
