--- a/src/docs/guides/sheet/features/data-validation.en-US.mdx
+++ b/src/docs/guides/sheet/features/data-validation.en-US.mdx
@@ -57,6 +57,8 @@ univer.registerPlugin(UniverSheetsDataValidationPlugin);
 
 ## Using Facade API
 
+To get full defination of facade api, please refer to [FacadeAPI](/typedoc/@univerjs/facade/README)
+
 ### Add a data validation rule
 ```typescript
 import { FUniver } from '@univerjs/facade';
