--- a/src/docs/guides/sheet/features/thread-comment.en-US.mdx
+++ b/src/docs/guides/sheet/features/thread-comment.en-US.mdx
@@ -95,6 +95,8 @@ univer.registerPlugin(UniverSheetsThreadCommentPlugin);
 
 ## Facade API
 
+To get full defination of facade api, please refer to [FacadeAPI](/typedoc/@univerjs/facade/README)
+
 ### Example
 ```typescript
 const univerAPI = FUniver.newAPI(univer);
