--- a/src/docs/guides/sheet/features/thread-comment.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/thread-comment.zh-CN.mdx
@@ -95,6 +95,8 @@ univer.registerPlugin(UniverSheetsThreadCommentPlugin);
 
 ## Facade API
 
+完整 facade api 类型定义，请查看 [FacadeAPI](/typedoc/@univerjs/facade/README)
+
 ### 示例
 ```typescript
 const univerAPI = FUniver.newAPI(univer);
