feat: add version info

--- a/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
@@ -451,7 +451,7 @@ activeWorkbook.onSelectionChange((selection) => {
 });
 ```
 
-### 添加一个Popup到cell
+### 添加一个Popup到cell <VersionBadge version="0.2.10+" />
 ```tsx
 // get range
 const workbook = univerAPI.getActiveWorkbook();
@@ -463,7 +463,7 @@ A1_J10.attachPopupToCell({
 });
 ```
 
-### 添加一个FloatDom到sheet
+### 添加一个FloatDom到sheet <VersionBadge version="0.2.10+" />
 ```tsx
 worksheet.addFloatDomToPosition({
     componentKey: ({ data }) => (
