--- a/src/docs/guides/sheet/features/data-validation.en-US.mdx
+++ b/src/docs/guides/sheet/features/data-validation.en-US.mdx
@@ -55,7 +55,7 @@ univer.registerPlugin(UniverDataValidationPlugin);
 univer.registerPlugin(UniverSheetsDataValidationPlugin);
 ```
 
-## Using Facade API
+## Using Facade API <VersionBadge version="0.2.10+" />
 
 To get full defination of facade api, please refer to [FacadeAPI](/typedoc/@univerjs/facade/README)
 
