--- a/src/docs/guides/sheet/features/data-validation.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/data-validation.zh-CN.mdx
@@ -55,7 +55,7 @@ univer.registerPlugin(UniverDataValidationPlugin);
 univer.registerPlugin(UniverSheetsDataValidationPlugin);
 ```
 
-## Facade API
+## Facade API <VersionBadge version="0.2.10+" />
 
 完整 facade api 类型定义，请查看 [FacadeAPI](/typedoc/@univerjs/facade/README)
 
