--- a/src/docs/guides/sheet/features/thread-comment.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/thread-comment.zh-CN.mdx
@@ -93,7 +93,7 @@ univer.registerPlugin(UniverSheetsThreadCommentBasePlugin);
 univer.registerPlugin(UniverSheetsThreadCommentPlugin);
 ```
 
-## Facade API
+## Facade API <VersionBadge version="0.2.10+" />
 
 完整 facade api 类型定义，请查看 [FacadeAPI](/typedoc/@univerjs/facade/README)
 
