--- a/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
@@ -451,7 +451,7 @@ activeWorkbook.onSelectionChange((selection) => {
 });
 ```
 
-### attch a popup to cell
+### attch a popup to cell <VersionBadge version="0.2.10+" />
 ```tsx
 // get range
 const workbook = univerAPI.getActiveWorkbook();
@@ -463,7 +463,7 @@ A1_J10.attachPopupToCell({
 });
 ```
 
-### add float dom to sheet
+### add float dom to sheet <VersionBadge version="0.2.10+" />
 ```tsx
 worksheet.addFloatDomToPosition({
     componentKey: ({ data }) => (
