--- a/src/docs/guides/sheet/features/data-validation.en-US.mdx
+++ b/src/docs/guides/sheet/features/data-validation.en-US.mdx
@@ -6,6 +6,14 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 <BadgeGroup values={[UniverTypes.SHEET]} value={UniverTypes.SHEET} />
 
 Data validation is a feature that sets rules in cells to ensure that the data entered by users meets specific conditions.
+Currently supported data validation types:
+* number
+* integer
+* Text length
+* date
+* checkbox
+* Drop-down list (single/multiple)
+* Custom formula
 
 ## Installation
 
