--- a/src/docs/guides/sheet/features/data-validation.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/data-validation.zh-CN.mdx
@@ -6,6 +6,14 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 <BadgeGroup values={[UniverTypes.SHEET]} value={UniverTypes.SHEET} />
 
 数据验证是一种在单元格中设置规则，以确保用户输入的数据符合特定条件的功能。
+目前已经支持的数据验证类型:
+* 数字
+* 整数
+* 文本长度
+* 日期
+* 复选框
+* 下拉列表(单选/多选)
+* 自定义公式
 
 ## 安装
 
